--- a/templates/cart/cart_detail.html
+++ b/templates/cart/cart_detail.html
@@ -78,36 +78,50 @@
 					</tfoot>
 				</table>
 			</div>
-			<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"style="float:right">Checout</button>
+			<button type="button" class="btn btn-primary" style="float:right" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Checkout</button>
+
 		</div>
 	</section> <!--/#cart_items-->
 <br>
 
 
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+
+
+<!-- Modal -->
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
       <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
+        <form method="post" action="/checkout/">
+			{% csrf_token %}
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Phone</label>
+            <input type="text" name="phone" class="form-control" id="recipient-name">
           </div>
-          <div class="mb-3">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">Address:</label>
+            <textarea class="form-control" name="address" id="message-text"></textarea>
           </div>
+			 <div class="form-group">
+            <label for="recipient-name" class="col-form-label">pincode</label>
+            <input type="text" name="pincode" class="form-control">
+          </div>
+			 <div class="modal-footer">
+ 			<button type="submit" class="btn btn-primary">Checkout</button>
+
+      </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
-      </div>
+
     </div>
   </div>
 </div>
