--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 									<div class="panel-body">
 										<ul>
 											{% for i in cat.sub_category_set.all %}
-											<li><a href="/?category={{i.id}}">{{i.name}} </a></li>
+											<li><a href="{{i.id}}"><a href="/?category={{i.id}}&brand={{i.id}}">{{i.name}}</a></a><li>
 											{% endfor %}
 
 										</ul>
@@ -101,13 +101,9 @@
 							<h2>Brands</h2>
 							<div class="brands-name">
 								<ul class="nav nav-pills nav-stacked">
-									<li><a href="#"> <span class="pull-right">(50)</span>Acne</a></li>
-									<li><a href="#"> <span class="pull-right">(56)</span>Grüne Erde</a></li>
-									<li><a href="#"> <span class="pull-right">(27)</span>Albiro</a></li>
-									<li><a href="#"> <span class="pull-right">(32)</span>Ronhill</a></li>
-									<li><a href="#"> <span class="pull-right">(5)</span>Oddmolly</a></li>
-									<li><a href="#"> <span class="pull-right">(9)</span>Boudestijn</a></li>
-									<li><a href="#"> <span class="pull-right">(4)</span>Rösch creative culture</a></li>
+									{% for i in brand %}
+									<li><a href="/?brand={{i.id}}"> <span class="pull-right">(50)</span>{{i.name}}</a></li>
+ 									{% endfor %}
 								</ul>
 							</div>
 						</div><!--/brands_products-->
