--- a/templates/master.html
+++ b/templates/master.html
@@ -91,7 +91,7 @@
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
 								<li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-								<li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
+								<li><a href="/order/"><i class="fa fa-star"></i>Your order</a></li>
 								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a href="cart/cart-detail/"><i class="fa fa-shopping-cart"></i> Cart<span class="badge bg-secondary">{{request.session.cart|length}}</span></a></li>
 								{% if user.is_authenticated %}
@@ -120,14 +120,14 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.html" class="active">Home</a></li>
+								<li><a href="{% url 'index' %}" class="active">Home</a></li>
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.html">Products</a></li>
-										<li><a href="product-details.html">Product Details</a></li>
+                                        <li><a href="/product/">Products</a></li>
+
 										<li><a href="checkout.html">Checkout</a></li>
 										<li><a href="cart.html">Cart</a></li>
-										<li><a href="login.html">Login</a></li>
+										<li><a href="/accounts/login/">Login</a></li>
                                     </ul>
                                 </li>
 								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
@@ -137,14 +137,16 @@
                                     </ul>
                                 </li>
 								<li><a href="404.html">404</a></li>
-								<li><a href="contact-us.html">Contact</a></li>
+								<li><a href="/contact_us">Contact</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-3">
+						<form method="get" action="/search/">
 						<div class="search_box pull-right">
-							<input type="text" placeholder="Search"/>
+							<input name="query" type="text" placeholder="Search"/>
 						</div>
+							</form>
 					</div>
 				</div>
 			</div>
